tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:23-5:24: error: unknown universe level 'v'
doSeqRightIssue.lean:8:0-9:40: warning: declaration uses 'sorry'
doSeqRightIssue.lean:7:8-7:10: warning: declaration uses 'sorry'
